# consult7

./: .gitignore  .mcp.json  CLAUDE-archive.md  ERROR.md  ERROR_SIMPLE.md  GEMINI3_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  OPENROUTER_AUTH_BUG.md  PLAN.md  PROCESS_NOTES.md  README.md  REFACTOR.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.2.2.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v3.0.0.md  RELEASE_NOTES_v3.1.0.md  RELEASE_NOTES_v3.1.1.md  RELEASE_NOTES_v3.1.2.md  RELEASE_NOTES_v3.2.0.md  TIMEOUT.md  claude-desktop-wrapper.sh  providers.example.yaml  providers.yaml  pyproject.toml  test_config_isolated.py  test_custom_providers.py
docs/: CUSTOM_PROVIDERS.md
specs/: custom-openai-providers-implementation-plan-v2.md  custom-openai-providers-implementation-plan.md
src/consult7/: __init__.py  __main__.py  constants.py  consultation.py  exceptions.py  file_processor.py  server.py  token_utils.py  tool_definitions.py
src/consult7/config/: __init__.py  loader.py  models.py
src/consult7/providers/: __init__.py  base.py  configurable_openai_provider.py  google.py  openai.py  openrouter.py
