[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consult7"
version = "1.0.0"
description = "MCP server for consulting large context window models to analyze extensive file collections"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Stefan Szeider", email = "stefan@szeider.net"}
]
keywords = ["mcp", "llm", "code-analysis", "large-context"]
dependencies = [
    "mcp",
    "httpx",
    "google-genai",
    "openai",
]

[project.urls]
Homepage = "https://github.com/szeider/consult7"
Repository = "https://github.com/szeider/consult7"
Issues = "https://github.com/szeider/consult7/issues"

[project.scripts]
consult7 = "consult7.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/consult7"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]