[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consult7"
version = "1.2.0"
description = "MCP server for consulting large context window models to analyze extensive file collections"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Stefan Szeider", email = "stefan@szeider.net"}
]
keywords = ["mcp", "llm", "code-analysis", "large-context"]
dependencies = [
    "mcp>=1.9.4",
    "httpx>=0.28.1",
    "google-genai>=1.19.0",
    "openai>=1.88.0",
]

[project.urls]
Homepage = "https://github.com/szeider/consult7"
Repository = "https://github.com/szeider/consult7"
Issues = "https://github.com/szeider/consult7/issues"

[project.scripts]
consult7 = "consult7.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/consult7"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
